--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
-
+    "server": "nodemon server"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,9 @@
     "express": "^4.19.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.2",
+    "mongoose": "^8.2.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
