--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 mongoURI="mongodb+srv://gabrielalrifai:vvHqx5qzWohpmRmo@cluster319.kkebhhl.mongodb.net/"
 PORT=3000
 jwtSecret="myTopSecretCodeThatNoOneKnows"
+
+# APIkey=API Key: 2ca531f013c64b21873abdea5b97de6f
