backend-auth working

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-mongoURI="mongodb+srv://gabrielalrifai:vvHqx5qzWohpmRmo@cluster319.kkebhhl.mongodb.net/"
+mongoURI="mongodb+srv://gabrielalrifai:vvHqx5qzWohpmRmo@cluster319.kkebhhl.mongodb.net/users"
 PORT=3000
 jwtSecret="myTopSecretCodeThatNoOneKnows"
 
