--- a/.env
+++ b/.env
@@ -2,4 +2,9 @@ mongoURI="mongodb+srv://gabrielalrifai:vvHqx5qzWohpmRmo@cluster319.kkebhhl.mongo
 PORT=3000
 jwtSecret="myTopSecretCodeThatNoOneKnows"
 
-# APIkey=API Key: 2ca531f013c64b21873abdea5b97de6f
+
+# Spoonacular API Key: 2ca531f013c64b21873abdea5b97de6f
+
+# RapidAPI: cfe608883cmshc089ec670ef24afp11d781jsnbee990a342d9
+
+# spoonacular-recipe-food-nutrition-v1.p.rapidapi.com
