updated .env with API key

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 mongoURI="mongodb+srv://gabrielalrifai:vvHqx5qzWohpmRmo@cluster319.kkebhhl.mongodb.net/users"
 PORT=3000
 jwtSecret="myTopSecretCodeThatNoOneKnows"
+RAPIDAPI_KEY="cfe608883cmshc089ec670ef24afp11d781jsnbee990a342d9"
 
 
 # Spoonacular API Key: 2ca531f013c64b21873abdea5b97de6f
